# FinanceClassifier

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/mlproject/: main.py  run_pipeline.py
src/mlproject/api/: classify.py  health.py
src/mlproject/data/: Data_Processing.md  data_preprocessing.ipynb  findata_processed.csv
src/mlproject/interfaces/: sklearn_protocol.py
src/mlproject/models/classic/: Training.md  classifier.py  model_evaluation.py  tune_hyperparameters.py
src/mlproject/models/llm/: LLM.md  LLM_training.ipynb
src/mlproject/pipelines/: training_logic.py
src/mlproject/schemas/: transaction_schema.py
src/mlproject/utils/: load_model.py  logger.py  parameters_to_tune.py  read_data.py  split_data.py
tests/: dummy_data.csv  test_simple.py
