[project]
name = "FinML"
version = "0.1.0"
description = "End-to-end ML project in Finance domain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = true

[tool.setuptools.package-data]
myproject = ["data/*.csv"]

